--- a/BUILD.gn
+++ b/BUILD.gn
@@ -24,4 +24,7 @@ ohos_cargo_crate("lib") {
     cargo_pkg_authors = "Josef Brandl <mail@josefbrandl.de>"
     cargo_pkg_name = "pin-utils"
     cargo_pkg_description = "Utilities for pinning"
+    module_output_extension = ".rlib"
+    part_name = "rust_pin_utils"
+    subsystem_name = "thirdparty"
 }
